--- a/backend/CatProject/db.properties
+++ b/backend/CatProject/db.properties
@@ -1,5 +1,5 @@
 #db.properties
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=catdb.cpsfn0vi5sml.ap-northeast-2.rds.amazonaws.com
+jdbc.url=jdbc:mysql://catdb.cpsfn0vi5sml.ap-northeast-2.rds.amazonaws.com/mydb?allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&useSSL=false
 jdbc.id=admin
 jdbc.pw=didhddl123
