--- a/backend/CatProject/.classpath
+++ b/backend/CatProject/.classpath
@@ -33,6 +33,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Dev/00.sw/lib/mysql-connector-java-8.0.30.jar"/>
+	<classpathentry kind="lib" path="C:/Dev/00.sw/lib/mysql-connector-java-8.0.21.jar"/>
+	<classpathentry kind="lib" path="C:/Dev/00.sw/lib/jackson-annotations-2.12.7.jar"/>
+	<classpathentry kind="lib" path="C:/Dev/00.sw/lib/jackson-core-2.12.7.jar"/>
+	<classpathentry kind="lib" path="C:/Dev/00.sw/lib/jackson-databind-2.12.7.jar"/>
+	<classpathentry kind="lib" path="C:/Dev/00.sw/lib/json-20220924.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
