--- a/backend/CatProject/.settings/org.eclipse.core.resources.prefs
+++ b/backend/CatProject/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-encoding//src/controller/CatController.java=UTF-8
+eclipse.preferences.version=1
 encoding//src/controller/PictureController.java=UTF-8
 encoding//src/exception/NotExistException.java=UTF-8
 encoding//src/model/dao/PictureDAO.java=UTF-8
@@ -9,4 +9,3 @@ encoding//src/service/CatService.java=UTF-8
 encoding//src/service/PictureService.java=UTF-8
 encoding//src/test/TestView.java=UTF-8
 encoding//src/util/DBUtil.java=UTF-8
-
